xke prep till scenario outline

--- a/pom.xml
+++ b/pom.xml
@@ -1,15 +1,16 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>mycucmber</groupId>
-  <artifactId>CucumberWay</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
+  	<modelVersion>4.0.0</modelVersion>
+  	<groupId>mycucmber</groupId>
+  	<artifactId>CucumberWay</artifactId>
+  	<version>0.0.1-SNAPSHOT</version>
   
   
-  <properties>
+  	<properties>
 		<selenium.version>2.53.0</selenium.version>
 		<cucumber.version>1.2.4</cucumber.version>
-	</properties>
-	<dependencies>
+		<testng.version>6.9.10</testng.version>
+  	</properties>
+  	<dependencies>
 		<dependency>
 			<groupId>org.seleniumhq.selenium</groupId>
 			<artifactId>selenium-java</artifactId>
@@ -28,6 +29,12 @@
 			<version>${cucumber.version}</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.testng</groupId>
+			<artifactId>testng</artifactId>
+			<version>${testng.version}</version>
+		</dependency>
+		
 	</dependencies>
 
     <build>
