--- a/pom.xml
+++ b/pom.xml
@@ -1,16 +1,18 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  	<modelVersion>4.0.0</modelVersion>
-  	<groupId>mycucmber</groupId>
-  	<artifactId>CucumberWay</artifactId>
-  	<version>0.0.1-SNAPSHOT</version>
-  
-  
-  	<properties>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+	<groupId>mycucmber</groupId>
+	<artifactId>CucumberWay</artifactId>
+	<version>0.0.1-SNAPSHOT</version>
+
+
+	<properties>
 		<selenium.version>3.4.0</selenium.version>
-		<cucumber.version>1.2.4</cucumber.version>
-		<testng.version>6.9.10</testng.version>
-  	</properties>
-  	<dependencies>
+		<cucumber.version>1.2.5</cucumber.version>
+		<testng.version>6.11</testng.version>
+		<picocontainer.version>1.2.5</picocontainer.version>
+	</properties>
+	<dependencies>
 		<dependency>
 			<groupId>org.seleniumhq.selenium</groupId>
 			<artifactId>selenium-java</artifactId>
@@ -34,10 +36,18 @@
 			<artifactId>testng</artifactId>
 			<version>${testng.version}</version>
 		</dependency>
-		
+
+		<!-- for dependency injection -->
+		<dependency>
+			<groupId>info.cukes</groupId>
+			<artifactId>cucumber-picocontainer</artifactId>
+			<version>${picocontainer.version}</version>
+		</dependency>
+
+
 	</dependencies>
 
-    <build>
+	<build>
 		<plugins>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
@@ -56,6 +66,6 @@
 			</plugin>
 		</plugins>
 	</build>
-    
-  
+
+
 </project>
